Added Brandon Britt to the class roster

--- a/style.css
+++ b/style.css
@@ -40,3 +40,9 @@ main h2 {
 .codys-styles {
     background:rgb(92, 149, 235);
 }
+.bjbritt-style {
+    color: #A000EB;
+    background: #59EB15;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 32px;
+}
